Fix chakra icon overflow with nav menu

--- a/src/pages/App/components/nav.css
+++ b/src/pages/App/components/nav.css
@@ -109,6 +109,14 @@ span {
     padding: 10px;
 }
 
+.nav-outer-list {
+    z-index: 3;
+}
+
+.search-icon {
+    z-index: 1;
+}
+
 @media screen and (max-width: 600px) {
     body, html {
         overflow-x: hidden;
